--- a/src/main/resources/static/style/index.css
+++ b/src/main/resources/static/style/index.css
@@ -1,3 +1,32 @@
 .header {
     background-color: #d31f21;
+    font-family: 'Playfair Display', sans-serif;
+}
+.form-control {
+    margin-top: 1em;
+}
+.container-fluid{
+    font-family: 'Playfair Display', sans-serif;
+}
+.style-head {
+    position: absolute;
+    width: 100%;
+    height: 304px;
+    top: 65px;
+    background: linear-gradient(180deg, #D31F21 0%, rgba(217, 217, 217, 0) 100%);
+    z-index: 1;
+}
+.under-style{
+    margin-bottom: 100px;
+    position: absolute;
+    width: 1920px;
+    height: 211px;
+    left: 0px;
+    top: 1450px;
+    background: linear-gradient(360deg, #D31F21 0%, rgba(255, 255, 255, 0) 100%);
+    z-index: 1;
+}
+.text, h2, p {
+    position: relative;
+    z-index: 2;
 }
