--- a/src/main/resources/templates/user-add.html
+++ b/src/main/resources/templates/user-add.html
@@ -2,25 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title> Добавить работника </title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/style/index.css}">
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom header">
-    <img alt="Логотип" class="me-3" height="50" th:src="@{/icon/Main_Icon.png}" width="50">
-    <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-        <span class="fs-4">Главная</span>
-    </a>
-</div>
+<header th:replace="components/header :: header"></header>
+<!--<header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom header">-->
+<!--    <img alt="Логотип" class="me-3" height="50" th:src="@{/icon/Main_Icon.png}" width="50">-->
+<!--    <a href="/" class="d-flex align-items-center text-dark text-decoration-none">-->
+<!--        <span class="fs-4">Главная</span>-->
+<!--    </a>-->
+<!--</header>-->
 </body>
 <div class="mt-5 mb-5">
     <h1>Добавление нового сотрудника</h1>
     <form action="/list/add" method="post">
-        <input type="text" name="name" placeholder="Введите имя" class="form-control"><br>
-        <input type="text" name="surname" placeholder="Введите фамилию" class="form-control"><br>
-        <input type="text" name="telephone_user" placeholder="Введите номер телефона" class="form-control"><br>
-        <button type = "submit" class = "btn btn-success">Добавить</button>
+        <input type="text" name="name" placeholder="Введите имя" class="form-control">
+        <input type="text" name="surname" placeholder="Введите фамилию" class="form-control">
+        <input type="text" name="telephone_user" placeholder="Введите номер телефона" class="form-control">
+        <button type="submit" class="btn btn-success">Добавить</button>
     </form>
 </div>
 </html>
