Person finish test 2.0

--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -6,7 +6,7 @@
         <span class="fs-4">Главная</span>
     </a>
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 text-dark text-decoration-none" href="/list">Справка</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="/list">Справочник</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="/list/add">Добавить сотрудника</a>
     </nav>
 </header>
