--- a/src/main/resources/templates/list-main.html
+++ b/src/main/resources/templates/list-main.html
@@ -1,45 +1,38 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Поиск рабочих</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" th:href="@{/style/index.css}">
-
+<title>Поиск рабочих</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" th:href="@{/style/index.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/style/list-main.css}">
 </head>
 <body>
-<header th:replace="components/header :: header"></header>
-<!--<header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom header">-->
-<!--    <img alt="Логотип" class="me-3" height="50" th:src="@{/icon/Main_Icon.png}" width="50">-->
-<!--    <a href="/" class="d-flex align-items-center text-dark text-decoration-none">-->
-<!--        <span class="fs-4">Главная</span>-->
-<!--    </a>-->
-<!--    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">-->
-<!--        <a class="me-3 py-2 text-dark text-decoration-none" href="/list/add">Добавить сотрудника</a>-->
-<!--    </nav>-->
-<!--</header>-->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="text/javascript" th:src="@{../static/js/search.js}" defer></script>
+<header th:replace="~{components/header :: header}"></header>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
-            <!--            todo.todo: use js to send request, read about ajax, events in js, click event, submit event, json stringify, make some classes in js as -->
-            <form action="/list/search">
+            <form>
                 <div class="mb-3">
-                    <label for="name" class="form-label">Имя:</label>
-                    <input type="text" id="name" name="name" class="form-control" placeholder="Введите имя">
+                    <label for="firstName" class="form-label">Имя:</label>
+                    <input type="text" id="firstName" name="firstName" class="form-control" placeholder="Введите имя" onkeyup="search()">
                 </div>
                 <div class="mb-3">
-                    <label for="surname" class="form-label">Фамилия:</label>
-                    <input type="text" id="surname" name="surname" class="form-control" placeholder="Введите фамилию">
+                    <label for="lastName" class="form-label">Фамилия:</label>
+                    <input type="text" id="lastName" name="lastName" class="form-control" placeholder="Введите фамилию" onkeyup="search()">
                 </div>
-                <button type="submit" class="btn btn-success">Поиск</button>
             </form>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" id="results">
             <div class="d-flex flex-row flex-wrap">
-                <div th:each="el : ${posts}" class="card mt-2">
+                <div th:each="el : ${persons}" class="card mt-2">
+                    <img th:src="@{/icon/Icon_Person.png}" class="card-img-top" alt="Изображение работника">
                     <div class="card-body">
-                        <h3 th:text="${el.name + ' ' + el.surname}" class="card-title"></h3>
-                        <p th:text="${el.phoneNumber}" class="card-text"></p>
+                        <h3 th:text="${el.firstName + ' ' + el.middleName + ' ' + el.lastName}" class="card-title"></h3>
+                        <p>
+                            <span th:text="${'Телефон: ' + el.phoneNumber}" class="card-text"></span><br>
+                            <span th:text="${'Должность: ' + el.position + ' ' + el.officeNumber}" class="card-text"></span><br>
+                        </p>
                     </div>
                 </div>
             </div>
