--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -1,34 +1,41 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title th:text="${title}"></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="/style/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/style/index.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style/home.css}">
+</head>
+<body>
 <header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom header">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/active.js"></script>
     <a href="/">
         <img alt="Логотип" class="me-3" height="50" th:src="@{/icon/Main_Icon.png}" width="50">
     </a>
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
         <span class="fs-4">Главная</span>
     </a>
-    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 text-dark text-decoration-none" href="/list">Справочник</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" href="/list/add">Добавить сотрудника</a>
-    </nav>
+    <div class="navbar ml-auto nav-menu">
+        <a>Навигация</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsedNav" aria-controls="collapsedNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse col-2 nav-menu" id="collapsedNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link col-1" href="/list">Справочник</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link col-1" href="/list/add">Добавить сотрудника</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
 </header>
-
-<!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
-
-<!--<header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom header">-->
-<!--    <a href="/">-->
-<!--        <img alt="Логотип" class="me-3" height="50" th:src="@{/icon/Main_Icon.png}" width="50">-->
-<!--    </a>-->
-<!--    <span th:if="${!homePage}">-->
-<!--        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">-->
-<!--            <span class="fs-4">Главная</span>-->
-<!--        </a>-->
-<!--    </span>-->
-<!--    <span th:if="${homePage}">-->
-<!--        <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">-->
-<!--            <a class="me-3 py-2 text-dark text-decoration-none" href="/list">Справка</a>-->
-<!--            <a class="me-3 py-2 text-dark text-decoration-none" href="/list/add">Добавить сотрудника</a>-->
-<!--        </nav>-->
-<!--    </span>-->
-<!--</header>-->
-
-
-<!--</html>-->
+</body>
+</html>
