--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,12 +3,33 @@
 <head>
     <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/style/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/style/index.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/style/home.css}">
 </head>
-<header th:replace="components/header :: header"></header>
 <body>
+<header th:replace="components/header :: header">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 2</a>
+                </li>
+                <!-- Добавьте другие пункты меню здесь -->
+            </ul>
+        </div>
+    </nav>
+</header>
+
 <div class="container-fluid background-image-container">
     <div class="row">
         <div class="col-md-4">
@@ -17,8 +38,14 @@
         </div>
         <div class="col-md-4">
             <h2 class="text-center">Цитаты дня, погода, дни рождения</h2>
-            <p class="color-main"><td th:text="${#temporals.format(#temporals.createNow().toLocalDate(), 'dd.MM.yyyy')}"></td>
-            <td th:text="${todayDay.description}"></td></p>
+                <p><span class="color-main" id="currentDayOfWeek"></span></p>
+            </a>
+            <div class="color-main">
+                <a th:href="@{'/calendar/' + ${todayDay.id}}">
+                    <p>Сегодня: <span th:text="${todayDay.description}"></span></p>
+                </a>
+            </div>
+            </a>
         </div>
         <div class="col-md-4">
             <h2 class="text-center text">Объявления</h2>
@@ -30,5 +57,8 @@
 <div class="under-style"></div>
 <img th:class="img-fluid" alt="низ" th:src="@{/icon/under_head.png}">
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="/js/bootstrap.js"></script>
+<script src="/js/calendar_day.js"></script>
 </body>
 </html>
