--- a/src/main/resources/templates/list-main.html
+++ b/src/main/resources/templates/list-main.html
@@ -3,10 +3,16 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" th:href="@{/style/index.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/style/list-main.css}">
+<style>
+    #results {
+        height: 100vh; /* Устанавливаем высоту 100% от видимой области страницы */
+        overflow-y: scroll; /* Добавляем вертикальную прокрутку */
+    }
+</style>
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script type="text/javascript" th:src="@{../static/js/search.js}" defer></script>
+<script src="/js/search.js"></script>
 <header th:replace="~{components/header :: header}"></header>
 
 <div class="container-fluid">
@@ -24,15 +30,20 @@
             </form>
         </div>
         <div class="col-md-8" id="results">
-            <div class="d-flex flex-row flex-wrap">
-                <div th:each="el : ${persons}" class="card mt-2">
-                    <img th:src="@{/icon/Icon_Person.png}" class="card-img-top" alt="Изображение работника">
-                    <div class="card-body">
-                        <h3 th:text="${el.firstName + ' ' + el.middleName + ' ' + el.lastName}" class="card-title"></h3>
-                        <p>
-                            <span th:text="${'Телефон: ' + el.phoneNumber}" class="card-text"></span><br>
-                            <span th:text="${'Должность: ' + el.position + ' ' + el.officeNumber}" class="card-text"></span><br>
-                        </p>
+            <div class="card mt-2">
+                <div class="card-body">
+                    <h4 class="card-title">Результаты поиска</h4>
+                    <div class="d-flex flex-row flex-wrap">
+                        <div th:each="el : ${persons}" class="card mt-2">
+                            <img th:src="@{/icon/Icon_Person.png}" class="card-img-top" alt="Изображение работника">
+                            <div class="card-body">
+                                <h5 th:text="${el.firstName + ' ' + el.middleName + ' ' + el.lastName}" class="card-title"></h5>
+                                <p>
+                                    <span th:text="${'Телефон: ' + el.phoneNumber}" class="card-text"></span><br>
+                                    <span th:text="${'Должность: ' + el.position + ' ' + el.officeNumber}" class="card-text"></span><br>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
