Holidays parser test 1.0

--- a/src/main/resources/templates/calendar-day-info.html
+++ b/src/main/resources/templates/calendar-day-info.html
@@ -36,8 +36,6 @@
       <h2 class="text-center">Детали календарного дня</h2>
     </div>
   </div>
-  <!DOCTYPE HTML>
-  <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>Details Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -46,21 +44,16 @@
   <div class="container">
 
       <span th:utext="${internationalInformation1}"></span>
-
       <span th:utext="${internationalInformation2}"></span>
-
-
       <span th:utext="${internationalInformation3}"></span>
-
-
       <span th:utext="${internationalInformation4}"></span>
-
-
       <span th:utext="${internationalInformation5}"></span>
-
+      <span th:utext="${internationalInformation6}"></span>
+      <span th:utext="${internationalInformation7}"></span>
+      <span th:utext="${internationalInformation8}"></span>
+      <span th:utext="${internationalInformation9}"></span>
   </div>
   </body>
-  </html>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
