--- a/src/main/resources/templates/calendar-day.html
+++ b/src/main/resources/templates/calendar-day.html
@@ -33,7 +33,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center">Детали календарного дня</h2>
+            <h2 class="text-center">Детали календарных дней</h2>
         </div>
     </div>
     <div class="col-md-12">
@@ -41,35 +41,43 @@
         <p>
             <a th:href="@{/details/info1(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo1}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info2(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo2}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info3(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo3}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info4(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo4}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info5(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo5}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info6(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo6}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info7(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo7}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info8(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo8}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info9(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo9}"></span>
-            </a></br>
+            </a></p>
+        <p>
             <a th:href="@{/details/info10(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo10}"></span>
-            </a></br>
-        </p>
+            </a></p>
     </div>
 </div>
 
