Holidays pages test 1.0

--- a/src/main/resources/templates/calendar-day.html
+++ b/src/main/resources/templates/calendar-day.html
@@ -39,43 +39,43 @@
     <div class="col-md-12">
         <h3><span th:text="${calendarDay.date}"></span></h3>
         <p>
-            <a th:href="@{/details/info1(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/1(id=*{calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo1}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info2(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/2(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo2}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info3(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/3(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo3}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info4(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/4(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo4}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info5(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/5(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo5}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info6(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/6(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo6}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info7(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/7(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo7}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info8(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/8(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo8}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info9(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/9(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo9}"></span>
             </a></p>
         <p>
-            <a th:href="@{/details/info10(id=${calendarDay.id})}">
+            <a th:href="@{/details/info/10(id=${calendarDay.id})}">
                 <span th:utext="${calendarDay.additionalInfo10}"></span>
             </a></p>
     </div>
