--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 <header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom header">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/active.js"></script>
     <a href="/">
@@ -19,7 +18,7 @@
         <span class="fs-4">Главная</span>
     </a>
     <div class="navbar ml-auto nav-menu">
-        <a>Навигация</a>
+        <a>Саправочник</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsedNav" aria-controls="collapsedNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,8 +33,7 @@
             </ul>
         </div>
     </div>
-
-
 </header>
+<script src="/js/bootstrap.js"></script>
 </body>
 </html>
