--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,25 +9,7 @@
 </head>
 <body>
 <header th:replace="components/header :: header">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Logo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 2</a>
-                </li>
-                <!-- Добавьте другие пункты меню здесь -->
-            </ul>
-        </div>
-    </nav>
+
 </header>
 
 <div class="container-fluid background-image-container">
@@ -40,9 +22,9 @@
             <h2 class="text-center">Цитаты дня, погода, дни рождения</h2>
                 <p><span class="color-main" id="currentDayOfWeek"></span></p>
             </a>
-            <div class="color-main">
+            <div class="color-main link-highlight">
                 <a th:href="@{'/calendar/' + ${todayDay.id}}">
-                    <p>Сегодня: <span th:text="${todayDay.description}"></span></p>
+                    <p>Сегодня: <span th:text="${todayDay.description}" ></span></p>
                 </a>
             </div>
             </a>
@@ -57,7 +39,6 @@
 <div class="under-style"></div>
 <img th:class="img-fluid" alt="низ" th:src="@{/icon/under_head.png}">
 </div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/bootstrap.js"></script>
 <script src="/js/calendar_day.js"></script>
 </body>
