--- a/src/main/resources/templates/user-add.html
+++ b/src/main/resources/templates/user-add.html
@@ -3,7 +3,7 @@
 <head>
     <title> Добавить работника </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/style/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/style/index.css}">
 </head>
 <body>
